--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-spring/web": "^9.7.1",
     "@react-three/drei": "^9.57.1",
     "@react-three/fiber": "^8.12.0",
@@ -21,6 +25,7 @@
     "react-router-dom": "^6.8.2",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
+    "sass": "^1.60.0",
     "three": "^0.150.1"
   },
   "devDependencies": {
